<resources>
    <string name="app_name">CriptoScan</string>
    <string name="title_activity_nav">NAV</string>
    <string name="title_home">Home</string>
    <string name="title_alert">Alertas</string>
    <string name="title_notifications">Notificações</string>
    <string name="title_profile">Perfil</string>
    <string name="app_label">Pesquisa aqui</string>
    <string name="search_hint">Criptomoedas</string>
    <string name="edit_name">Nome Completo</string>
    <string name="edit_email">Digite seu Email</string>
    <string name="edit_password">Digite sua senha</string>
    <string name="button_cadastrar">Cadastrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>