<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:label="@string/app_name"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ifpe.criptoscan.ui.home.HomeFragment"
        tools:layout="@layout/fragment_home"
        android:label="@string/title_home"
        >
        <action
            android:id="@+id/action_navigation_home_to_navigation_coin_details"
            app:destination="@id/navigation_coin_details" />
    </fragment>
    <fragment
        android:id="@+id/navigation_coin_details"
        android:name="com.ifpe.criptoscan.ui.home.CoinDetailsFragment"
        android:label="Detalhes"
        tools:layout="@layout/fragment_coin_details"
        app:graph="@navigation/mobile_navigation"/>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.ifpe.criptoscan.ui.dashboard.DashboardFragment"
        tools:layout="@layout/fragment_dashboard"
        android:label="@string/title_alert"
        />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.ifpe.criptoscan.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.ifpe.criptoscan.ui.user.UserFragment"
        android:label="Perfil"
        tools:layout="@layout/fragment_profile" />



</navigation>